# iNaturalist-Bingo-App

./: .gitignore  CLAUDE.md  LICENSE  MIGRATION_PLAN.md  README.md  bingo_generator.py  config.py  image_processor.py  inaturalist_client.py  main.py  models.py  pdf_renderer.py  pyproject.toml  ui.py
docs/: index.html
docs/css/: styles.css
docs/js/: api.js  app.js  bingo.js  config.js  location-scope.js  location-scope.test.mjs  metadata.js  pdf.js  place-map.js  species-settings.js  species-settings.test.mjs
tests/: metadata.test.mjs  pdf-filename.test.mjs  pdf-layout.test.mjs
